LOTS of fixes to Login process.  Did some LINT cleanup.